# VideoTransiver

./: CMakeLists.txt  README.txt
Reciver/: CMakeLists.txt  main.cpp  reciver.cpp  reciver.h
Sender/: CMakeLists.txt  sender.cpp
Server/: CMakeLists.txt  main.cpp
Server/core/: CMakeLists.txt  Server.h  VideoReader.cpp  sender.cpp  sender.h  socket.cpp
